# hoff-ocaml

./: .gitignore  .ocamlformat  README.md  dune  hoff.opam  main.ml  test.hff
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/default/: main.pp.ml  test.hff
_build/default/.main.eobjs/: ast.pp.ml.d  dune__exe.ml-gen  dune__exe__Ast.impl.all-deps  dune__exe__Lexer.impl.all-deps  dune__exe__Main.impl.all-deps  dune__exe__Parser.impl.all-deps  errors.pp.ml.d  lexer.pp.ml.d  main.pp.ml.d  parser.pp.ml.d  parser.pp.mli.d
_build/default/.main.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  (+14 more)
_build/default/.merlin-conf/: exe-main
_build/default/src/: ast.ml  ast.pp.ml  errors.ml  errors.pp.ml
docker/: Dockerfile  docker-compose.yml
examples/: lib.hff  test.hff  test2.hff
helper/: clang.sh
hoff/dir1/: test.hff
hoff/dir2/: test2.hff
misc/: compile.sh  stdlib.c  stdlib.ll  test.hff  test.ll  test.x  test2.hff
src/: ast.ml  cli.ml  codegen.ml  compiler.ml  errors.ml  funname.ml  lexer.mll  misc.ml  parser.mly  preprocess.ml  typecheck.ml
src/astgeneration/: ast.ml  lexer.mll  parser.messages  parser.mly  parser_messages.ml  parserengine.ml  tokens.ml
src/cli/: cli.ml
src/codegen/: codegen.ml  decl.ml  expr.ml  gdecl.ml  helpers.ml  lit.ml  misc.ml  module.ml  type.ml  usertype.ml
src/data/: ast.ml  errors.ml
src/helpers/: errors.ml  funname.ml  misc.ml
src/names/: names.ml
src/parser/: lexer.mll  parser.mly
src/typecheck/: typecheck.ml
stdlib/: io.c
(+17 files in other folders)
