(include_subdirs unqualified)

(subdir src
 (subdir astgeneration
  (ocamllex lexer)
  (menhir
   (flags --table)
   (modules parser)))
   
  ;(rule
  ; (targets parser_messages.ml)
  ; (deps parser.messages parser.mly)
  ; (action (with-stdout-to %{targets} 
  ;          (run menhir --compile-errors %{deps}))))
            )


(executable
 (name main)
 (libraries core llvm llvm.analysis sedlex sedlex.ppx menhirLib)
 (preprocess (pps ppx_deriving.show sedlex.ppx)))

;; run on changing file parser.mly
; cd src/astgeneration
; menhir --list-errors parser.mly > parser.messages 

;; run on changing file parser.messages
; cd src/astgeneration
; menhir --compile-errors parser.messages parser.mly > parser_messages.ml
